# tatar-names

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  bibliography.bib
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
data/release/: aliases.csv  croissant.json  datapackage.json  identities.csv  names.csv  review_queue.csv
data/source/: entities.csv  excluded_entities.csv
docs/: dataset.md  limitations.md  normalization.md  transliteration.md
rules/: confusables.yaml  normalization.yaml  transliteration_ru_latn_passport.yaml  transliteration_tt_latn.yaml  transliteration_tt_ru.yaml
schemas/: aliases.schema.json  attestations.schema.json  entities.schema.json  excluded_entities.schema.json  forms.schema.json  identities.schema.json  names.schema.json  relations.schema.json  review_queue.schema.json
sdks/python/: README.md  pyproject.toml
sdks/python/src/tatar_names/: __init__.py  audit.py  data.py  formations.py  normalize.py  pipeline.py  resolve.py  transliterate.py
sdks/python/src/tatar_names/cli/: __init__.py  audit.py  build.py  validate.py
sdks/python/tests/: golden_cases.yaml  test_audit.py  test_formations.py  test_normalization.py  test_resolver.py  test_transliteration.py  test_validation.py
