[project]
name = "tatar-names"
version = "0.1.0"
description = "Open Tatar/Russian/Latin name forms and a small resolver toolkit."
authors = [
    { name = "Damir Mukimov", email = "mukimov.d@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tatar-names-build = "tatar_names.cli.build:main"
tatar-names-audit = "tatar_names.cli.audit:main"
tatar-names-validate = "tatar_names.cli.validate:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
